--- a/Module1/Project/Rock_Paper_Scissor/rps-styles.css
+++ b/Module1/Project/Rock_Paper_Scissor/rps-styles.css
@@ -2,25 +2,201 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Gill Sans", sans-serif;
+  /* font-family: "Gill Sans", sans-serif; */
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
 body {
   background-color: #8cc461;
 }
+
 main {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
-.header {
-  width: 30rem;
-  height: 5rem;
+
+/* TITLE CONTAINER */
+.title-container {
+  display: flex;
+  justify-content: space-between;
+  width: 45rem;
   border: 2px solid white;
   border-radius: 1rem;
+  margin: 4rem 2rem;
+  padding: 0.5rem;
 }
-.header-line{
-    color: white;
-    padding: 0.1rem 0;
-    font-size: 1.8rem;
-    font-weight: 500;
+
+#title {
+  line-height: 2.5rem;
+  color: white;
+  font-weight: 500;
+  font-size: 2.4rem;
+  letter-spacing: 0.3rem;
 }
+
+.score-cards {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  font-size: 1.2rem;
+  color: #656565;
+  font-weight: 600;
+}
+
+#score-cards-1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 9rem;
+  background-color: white;
+  border-radius: 1rem;
+  padding: 0.5rem 3rem;
+}
+
+.score {
+  font-size: 3rem;
+}
+
+#score-cards-2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 9rem;
+  background-color: white;
+  border-radius: 1rem;
+  padding: 0.5rem 3rem;
+}
+
+/* ICONS CONTAINER */
+.icons-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 4.5rem;
+  position: relative;
+  margin-bottom: 5rem;
+}
+.icons-container-1{
+  display: flex;
+  gap: 7rem;
+}
+#stone{
+  background-color: white;
+  border: 1rem solid #0074B6;
+  border-radius: 50%;
+  padding: 1.4rem 1rem;
+  width: 8rem;
+  height: 7.7rem;
+  box-shadow: -1px 1px 11px 0px #00000059;
+  z-index: 1;
+}
+#scissor{
+  background-color: white;
+  border: 1rem solid #BD00FF;
+  border-radius: 50%;
+  padding: 1.2rem 1.8rem;
+  width: 7.8rem;
+  height: 7.5rem;
+  box-shadow: -1px 1px 11px 0px #00000059;
+  z-index: 1;
+}
+#paper{
+  background-color: white;
+  border: 1rem solid #FFA943;
+  border-radius: 50%;
+  padding: 1.2rem 1.4rem;
+  width: 8rem;
+  height: 7.7rem;
+  box-shadow: -1px 1px 11px 0px #00000059;
+  z-index: 1;
+}
+.line{
+  background-color: #000000A3;
+  width: 14rem;
+  height: 0.8rem;
+}
+.line-1{
+  position:absolute;
+  top: 3.3rem;
+  right: 5.8rem;
+}
+.line-2{
+  position: absolute;
+  transform: rotate(60deg);
+  top: 9rem;
+  left: -0.5rem;
+}
+.line-3{
+  position: absolute;
+  transform: rotate(-60deg);
+  top: 9rem;
+  right: -1rem;
+}
+
+/* rule-btn-container */
+.rule-btn-container{
+  display: flex;
+}
+#rule-btn{
+  padding: 0.3rem 1rem;
+  border: 2px solid white;
+  border-radius: 0.5rem;
+  background-color: transparent;
+  color: white;
+  font-size: 1rem;
+  letter-spacing: 0.1rem;
+  font-weight: 600;
+}
+
+/* RULE CONTAINER */
+.rule-container{
+  background: #004429;
+  color: white;
+  border: 0.5rem solid white;
+  border-radius: 0.8rem;
+  width: 17.5rem;
+  height: 21.5rem;
+  padding: 1rem;
+  position: relative;
+}
+.close-container{
+  background: #FF0000;
+  padding: 0.7rem 0.7rem;
+  width: 2.3rem;
+  height:2.7rem;  
+  border-radius: 50%;
+  position: absolute;
+  right: -1rem;
+  top: -1.5rem;
+}
+#close-btn{
+  width: 1rem;
+  height: 1.3rem;
+  text-align: center;
+}
+.rule-title{
+  text-align: center;
+  margin-bottom: 0.8rem;
+}
+.rule-point{
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto auto auto;
+  place-items: center;
+  font-size: 0.8rem;
+  column-gap: 1rem;
+  row-gap: 0.8rem;
+}
+.rule-point span{
+  background-color: yellow;
+  padding: 0 2px;
+  font-size: 0.4rem;
+}
+
