--- a/Module1/Project/Rock_Paper_Scissor/rps-styles.css
+++ b/Module1/Project/Rock_Paper_Scissor/rps-styles.css
@@ -2,8 +2,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Roboto;
   /* font-family: "Gill Sans", sans-serif; */
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui;
 }
 
 body {
@@ -12,13 +13,16 @@ body {
 
 main {
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
   flex-wrap: wrap;
 }
 
 /* TITLE CONTAINER */
+.title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .title-container {
   display: flex;
   justify-content: space-between;
@@ -74,7 +78,12 @@ main {
 }
 
 /* ICONS CONTAINER */
-.icons-container{
+.icons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.icons-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -83,57 +92,58 @@ main {
   position: relative;
   margin-bottom: 5rem;
 }
-.icons-container-1{
+.icons-container-1 {
   display: flex;
   gap: 7rem;
 }
-#stone{
+#stone {
   background-color: white;
-  border: 1rem solid #0074B6;
+  border: 1rem solid #0074b6;
   border-radius: 50%;
   padding: 1.4rem 1rem;
   width: 8rem;
   height: 7.7rem;
-  box-shadow: -1px 1px 11px 0px #00000059;
+  box-shadow: inset -1px 1px 11px 0px #00000059;
+  /* box-shadow: inset 3px 5px 27px 0px #00000040; */
   z-index: 1;
 }
-#scissor{
+#scissor {
   background-color: white;
-  border: 1rem solid #BD00FF;
+  border: 1rem solid #bd00ff;
   border-radius: 50%;
   padding: 1.2rem 1.8rem;
   width: 7.8rem;
   height: 7.5rem;
-  box-shadow: -1px 1px 11px 0px #00000059;
+  box-shadow: inset -1px 1px 11px 0px #00000059;
   z-index: 1;
 }
-#paper{
+#paper {
   background-color: white;
-  border: 1rem solid #FFA943;
+  border: 1rem solid #ffa943;
   border-radius: 50%;
   padding: 1.2rem 1.4rem;
   width: 8rem;
   height: 7.7rem;
-  box-shadow: -1px 1px 11px 0px #00000059;
+  box-shadow: inset -1px 1px 11px 0px #00000059;
   z-index: 1;
 }
-.line{
-  background-color: #000000A3;
+.line {
+  background-color: #000000a3;
   width: 14rem;
   height: 0.8rem;
 }
-.line-1{
-  position:absolute;
+.line-1 {
+  position: absolute;
   top: 3.3rem;
   right: 5.8rem;
 }
-.line-2{
+.line-2 {
   position: absolute;
   transform: rotate(60deg);
   top: 9rem;
   left: -0.5rem;
 }
-.line-3{
+.line-3 {
   position: absolute;
   transform: rotate(-60deg);
   top: 9rem;
@@ -141,22 +151,28 @@ main {
 }
 
 /* rule-btn-container */
-.rule-btn-container{
+.rule-btn-container {
   display: flex;
 }
-#rule-btn{
+#rule-btn {
   padding: 0.3rem 1rem;
-  border: 2px solid white;
+  border: 4px solid white;
   border-radius: 0.5rem;
   background-color: transparent;
   color: white;
-  font-size: 1rem;
+  font-size: 1.5rem;
   letter-spacing: 0.1rem;
-  font-weight: 600;
+  font-weight: 700;
+  text-align: right;
 }
 
 /* RULE CONTAINER */
-.rule-container{
+.rule-btn-container{
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 3rem;
+}
+.rule-container {
   background: #004429;
   color: white;
   border: 0.5rem solid white;
@@ -166,26 +182,26 @@ main {
   padding: 1rem;
   position: relative;
 }
-.close-container{
-  background: #FF0000;
+.close-container {
+  background: #ff0000;
   padding: 0.7rem 0.7rem;
   width: 2.3rem;
-  height:2.7rem;  
+  height: 2.7rem;
   border-radius: 50%;
   position: absolute;
   right: -1rem;
   top: -1.5rem;
 }
-#close-btn{
+#close-btn {
   width: 1rem;
   height: 1.3rem;
   text-align: center;
 }
-.rule-title{
+.rule-title {
   text-align: center;
   margin-bottom: 0.8rem;
 }
-.rule-point{
+.rule-point {
   display: grid;
   grid-template-columns: auto auto;
   grid-template-rows: auto auto auto auto;
@@ -194,9 +210,8 @@ main {
   column-gap: 1rem;
   row-gap: 0.8rem;
 }
-.rule-point span{
+.rule-point span {
   background-color: yellow;
   padding: 0 2px;
   font-size: 0.4rem;
 }
-
