--- a/Module1/Project/Rock_Paper_Scissor/rps-styles.css
+++ b/Module1/Project/Rock_Paper_Scissor/rps-styles.css
@@ -23,6 +23,7 @@ main {
   justify-content: center;
   align-items: center;
 }
+
 .title-container {
   display: flex;
   justify-content: space-between;
@@ -50,7 +51,8 @@ main {
   color: #656565;
   font-weight: 600;
 }
-.score{
+
+.score {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -60,18 +62,20 @@ main {
   border-radius: 1rem;
   padding: 0.5rem 3rem;
 }
-.computer-score{
+
+.computer-score {
   font-size: 2.5rem;
 }
-.your-score{
+
+.your-score {
   font-size: 2.5rem;
 }
 
 /* ICONS CONTAINER */
-.icons{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .icons-container {
   display: flex;
@@ -80,58 +84,63 @@ main {
   flex-direction: column;
   gap: 4.5rem;
   position: relative;
-  margin-bottom: 4rem;
+  margin-bottom: 2rem;
 }
 .icons-container-1 {
   display: flex;
   gap: 7rem;
 }
-#stone {
+.move-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 8rem;
+  height: 8rem;
+  border-radius: 50%;
   background-color: white;
+  box-shadow: inset -1px 1px 11px 0px #00000059;
+  z-index: 1;
+}
+.stone, .one {
   border: 1rem solid #0074b6;
-  border-radius: 50%;
-  padding: 1.4rem 1rem;
-  width: 7.5rem;
-  height: 7.2rem;
-  box-shadow: inset -1px 1px 11px 0px #00000059;
-  z-index: 1;
 }
-#scissor {
-  background-color: white;
-  border: 1rem solid #bd00ff;
-  border-radius: 50%;
-  padding: 1.2rem 1.8rem;
-  width: 7.2rem;
-  height: 7.1rem;
-  box-shadow: inset -1px 1px 11px 0px #00000059;
-  z-index: 1;
-}
-#paper {
-  background-color: white;
+.paper, .two {
   border: 1rem solid #ffa943;
-  border-radius: 50%;
-  padding: 1.2rem 1.4rem;
-  width: 7.5rem;
-  height: 7.2rem;
-  box-shadow: inset -1px 1px 11px 0px #00000059;
-  z-index: 1;
+}
+.scissor, .three {
+  border: 1rem solid #bd00ff;
+}
+.stone img {
+  width: 4rem;
+  height: 3rem;
+}
+.scissor img {
+  width: 2.5rem;
+  height: 3rem;
+}
+.paper img {
+  width: 3.5rem;
+  height: 4rem;
 }
 .line {
   background-color: #000000a3;
   width: 14rem;
   height: 0.8rem;
 }
+
 .line-1 {
   position: absolute;
   top: 3.3rem;
   right: 5.8rem;
 }
+
 .line-2 {
   position: absolute;
   transform: rotate(60deg);
   top: 9rem;
   left: -0.5rem;
 }
+
 .line-3 {
   position: absolute;
   transform: rotate(-60deg);
@@ -140,15 +149,17 @@ main {
 }
 
 /* RULE CONTAINER */
-.rule-container{
+.rule-container {
   position: relative;
 }
-.rule-btn-container{
+
+.rule-btn-container {
   display: flex;
   justify-content: flex-end;
   margin-right: 3rem;
 }
-#rule-btn {
+
+.rule-btn {
   padding: 0.2rem 1rem;
   border: 4px solid white;
   border-radius: 0.5rem;
@@ -159,6 +170,7 @@ main {
   font-weight: 700;
   text-align: right;
 }
+
 .rule-book-container {
   background: #004429;
   color: white;
@@ -171,11 +183,13 @@ main {
   top: -22rem;
   right: 3rem;
 }
+
 .rule-title {
   text-align: center;
   margin-bottom: 0.8rem;
 }
-.close-btn-container {
+
+.rule-close-btn-container {
   background: #ff0000;
   padding: 0.7rem 0.7rem;
   width: 2.5rem;
@@ -185,11 +199,13 @@ main {
   right: -1rem;
   top: -1.5rem;
 }
-#close-btn {
+
+.close-btn {
   width: 1rem;
   height: 1.2rem;
   text-align: center;
 }
+
 .rule-book {
   display: grid;
   grid-template-columns: auto auto;
@@ -199,8 +215,74 @@ main {
   column-gap: 1rem;
   row-gap: 0.8rem;
 }
+
 .rule-book span {
   background-color: yellow;
   padding: 0 2px;
   font-size: 0.4rem;
+}
+
+.hidden {
+  display: none;
+}
+
+
+
+/* =======YOU WIN RENDERS======== */
+.you-win {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+}
+
+.you-win-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  line-height: 1.8rem;
+}
+
+.play-again-btn {
+  padding: 0.2rem 0.5rem;
+  border: 4px solid white;
+  border-radius: 0.5rem;
+  background-color: transparent;
+  color: white;
+  /* font-size: 1.5rem; */
+  /* letter-spacing: 0.1rem; */
+  /* font-weight: 00; */
+  /* text-align: right; */
+}
+
+.you-win {
+  color: white;
+  margin-bottom: 4rem;
+}
+
+.you-win-text {
+  display: flex;
+}
+
+.you-win-text-line-1 {
+  font-size: 2rem;
+  font-weight: 800;
+  letter-spacing: 0.2rem;
+}
+
+.you-win-text-line-2 {
+  font-size: 1.2rem;
+  font-weight: 700;
+  letter-spacing: 0.1rem;
+  margin-bottom: 0.6rem;
+}
+
+.play-again-btn {
+  background-color: white;
+  color: #6B6B6B;
+  font-weight: 700;
+  font-size: 0.7rem;
+  letter-spacing: 0.1rem;
+  padding: 0.4rem 1.2rem;
 }
