--- a/Module1/Project/Rock_Paper_Scissor/rps-styles.css
+++ b/Module1/Project/Rock_Paper_Scissor/rps-styles.css
@@ -84,7 +84,8 @@ main {
   flex-direction: column;
   gap: 4.5rem;
   position: relative;
-  margin-bottom: 2rem;
+  /* margin-bottom: 2rem; */
+  margin: 3rem 0;
 }
 .icons-container-1 {
   display: flex;
@@ -119,7 +120,7 @@ main {
   height: 3rem;
 }
 .paper img {
-  width: 3.5rem;
+  width: 3.8rem;
   height: 4rem;
 }
 .line {
@@ -148,7 +149,7 @@ main {
   right: -1rem;
 }
 
-/* RULE CONTAINER */
+/* ============RULE CONTAINER==========*/
 .rule-container {
   position: relative;
 }
@@ -169,6 +170,8 @@ main {
   letter-spacing: 0.1rem;
   font-weight: 700;
   text-align: right;
+  position: fixed;
+  bottom: 2rem;
 }
 
 .rule-book-container {
@@ -180,8 +183,9 @@ main {
   height: 21.5rem;
   padding: 1rem;
   position: absolute;
-  top: -22rem;
+  top: 0rem;
   right: 3rem;
+  z-index: 1;
 }
 
 .rule-title {
@@ -198,14 +202,13 @@ main {
   position: absolute;
   right: -1rem;
   top: -1.5rem;
+  border: none;
 }
-
 .close-btn {
   width: 1rem;
   height: 1.2rem;
   text-align: center;
 }
-
 .rule-book {
   display: grid;
   grid-template-columns: auto auto;
@@ -215,56 +218,47 @@ main {
   column-gap: 1rem;
   row-gap: 0.8rem;
 }
-
 .rule-book span {
   background-color: yellow;
   padding: 0 2px;
   font-size: 0.4rem;
 }
-
 .hidden {
   display: none;
 }
 
 
 
-/* =======YOU WIN RENDERS======== */
+/* =======YOU WIN CONTAINER======== */
 .you-win {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 6rem;
+  color: white;
+  margin: 8rem 0;
+  position: relative;
+}
+.picked{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-weight: 700;
+  font-size: 0.8rem;
+  letter-spacing: 0.1rem;
+  gap: 5rem;
+}
+.picked span{
   gap: 3rem;
 }
-
 .you-win-text {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   line-height: 1.8rem;
+  margin-top: 6rem;
 }
-
-.play-again-btn {
-  padding: 0.2rem 0.5rem;
-  border: 4px solid white;
-  border-radius: 0.5rem;
-  background-color: transparent;
-  color: white;
-  /* font-size: 1.5rem; */
-  /* letter-spacing: 0.1rem; */
-  /* font-weight: 00; */
-  /* text-align: right; */
-}
-
-.you-win {
-  color: white;
-  margin-bottom: 4rem;
-}
-
-.you-win-text {
-  display: flex;
-}
-
 .you-win-text-line-1 {
   font-size: 2rem;
   font-weight: 800;
@@ -285,4 +279,6 @@ main {
   font-size: 0.7rem;
   letter-spacing: 0.1rem;
   padding: 0.4rem 1.2rem;
+  border-radius: 0.5rem;
+  border: none;
 }
