updated score logic

--- a/Module1/Project/Rock_Paper_Scissor/rps-styles.css
+++ b/Module1/Project/Rock_Paper_Scissor/rps-styles.css
@@ -183,7 +183,7 @@ main {
   height: 21.5rem;
   padding: 1rem;
   position: absolute;
-  top: 0rem;
+  bottom: 2rem;
   right: 3rem;
   z-index: 1;
 }
@@ -236,7 +236,7 @@ main {
   align-items: center;
   gap: 6rem;
   color: white;
-  margin: 8rem 0;
+  margin: 6rem 0;
   position: relative;
 }
 .picked{
