--- a/Module1/Project/Rock_Paper_Scissor/rps-styles.css
+++ b/Module1/Project/Rock_Paper_Scissor/rps-styles.css
@@ -2,9 +2,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Roboto;
   /* font-family: "Gill Sans", sans-serif; */
-  font-family: system-ui;
+  font-family: sans-serif;
 }
 
 body {
@@ -34,7 +33,7 @@ main {
   padding: 0.5rem;
 }
 
-#title {
+.title-name {
   line-height: 2.5rem;
   color: white;
   font-weight: 500;
@@ -71,7 +70,7 @@ main {
   font-size: 2.5rem;
 }
 
-/* ICONS CONTAINER */
+/* ===== ICONS CONTAINER ===== */
 .icons {
   display: flex;
   justify-content: center;
@@ -84,7 +83,6 @@ main {
   flex-direction: column;
   gap: 4.5rem;
   position: relative;
-  /* margin-bottom: 2rem; */
   margin: 3rem 0;
 }
 .icons-container-1 {
@@ -102,16 +100,19 @@ main {
   box-shadow: inset -1px 1px 11px 0px #00000059;
   z-index: 1;
 }
-.stone, .one {
+.rock,
+.one {
   border: 1rem solid #0074b6;
 }
-.paper, .two {
+.paper,
+.two {
   border: 1rem solid #ffa943;
 }
-.scissor, .three {
+.scissor,
+.three {
   border: 1rem solid #bd00ff;
 }
-.stone img {
+.rock img {
   width: 4rem;
   height: 3rem;
 }
@@ -153,13 +154,11 @@ main {
 .rule-container {
   position: relative;
 }
-
 .rule-btn-container {
   display: flex;
   justify-content: flex-end;
   margin-right: 3rem;
 }
-
 .rule-btn {
   padding: 0.2rem 1rem;
   border: 4px solid white;
@@ -172,8 +171,29 @@ main {
   text-align: right;
   position: fixed;
   bottom: 2rem;
+  right: 2rem;
+  z-index: 1;
 }
-
+.rule-btn-transition {
+  transform: translateX(-8rem);
+}
+.rule-btn-transition-reverse {
+  transform: translateX(0rem);
+}
+.next-btn {
+  padding: 0.2rem 1rem;
+  border: 4px solid white;
+  border-radius: 0.5rem;
+  background-color: transparent;
+  color: white;
+  font-size: 1.5rem;
+  letter-spacing: 0.1rem;
+  font-weight: 700;
+  text-align: right;
+  position: fixed;
+  bottom: 2rem;
+  right: 2rem;
+}
 .rule-book-container {
   background: #004429;
   color: white;
@@ -182,9 +202,9 @@ main {
   width: 17.5rem;
   height: 21.5rem;
   padding: 1rem;
-  position: absolute;
-  bottom: 2rem;
-  right: 3rem;
+  position: fixed;
+  bottom: 6rem;
+  right: 2rem;
   z-index: 1;
 }
 
@@ -192,7 +212,6 @@ main {
   text-align: center;
   margin-bottom: 0.8rem;
 }
-
 .rule-close-btn-container {
   background: #ff0000;
   padding: 0.7rem 0.7rem;
@@ -227,7 +246,93 @@ main {
   display: none;
 }
 
+/* ============ELLIPSE CONTAINER==========*/
+.ellipse-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* position: absolute;
+  margin-bottom: 4rem;
+  margin-right: 28rem ; */
+}
+.ellipse-transition{
+  transform: translateX(27.5rem);
+}
+.ellipse-transition-lost{
+  transform: translateX(32.8rem);
+}
+.layer-1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  animation: outer1 1s ease-out infinite;
+  position: absolute;
+  margin-top: 4rem;
+  margin-left: 20rem ;
+}
+.layer-2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  animation: outer2 1s ease-out infinite;
+}
+.layer-3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  animation: outer3 1s ease-out infinite;
+}
 
+@keyframes outer1 {
+  0% {
+    transform: scale(1); 
+    background-color: #7be382;
+    width: 10rem;
+    height: 10rem;
+    box-shadow: 0px 1px 62px 0px #00000021;
+  }
+  100% {
+    transform: scale(1.2); 
+    background-color: #7be382; 
+    width: 10rem;
+    height: 10rem;
+    box-shadow: 0px 1px 62px 0px #00000021;
+  }
+}
+@keyframes outer2 {
+  0% {
+    transform: scale(1); 
+    background-color: #26cc00; 
+    width: 8rem;
+    height: 8rem;
+  }
+  100% {
+    transform: scale(1.2); 
+    background-color: #26cc00; 
+    width: 8rem;
+    height: 8rem;
+    box-shadow: 0px 1px 62px 0px #00000021;
+  }
+}
+@keyframes outer3 {
+  0% {
+    transform: scale(1); 
+    background-color: #009c1a; 
+    width: 6rem;
+    height: 6rem;
+    box-shadow: 0px 1px 62px 0px #00000021;
+  }
+  100% {
+    transform: scale(1.2);
+    background-color: #009c1a; 
+    width: 6rem;
+    height: 6rem;
+    box-shadow: 0px 1px 62px 0px #00000021;
+  }
+}
 
 /* =======YOU WIN CONTAINER======== */
 .you-win {
@@ -239,16 +344,16 @@ main {
   margin: 6rem 0;
   position: relative;
 }
-.picked{
+.picked {
   display: flex;
   flex-direction: column;
   align-items: center;
   font-weight: 700;
   font-size: 0.8rem;
   letter-spacing: 0.1rem;
-  gap: 5rem;
+  gap: 3rem;
 }
-.picked span{
+.picked span {
   gap: 3rem;
 }
 .you-win-text {
@@ -269,16 +374,55 @@ main {
   font-size: 1.2rem;
   font-weight: 700;
   letter-spacing: 0.1rem;
-  margin-bottom: 0.6rem;
 }
 
 .play-again-btn {
   background-color: white;
-  color: #6B6B6B;
+  color: #6b6b6b;
   font-weight: 700;
   font-size: 0.7rem;
   letter-spacing: 0.1rem;
-  padding: 0.4rem 1.2rem;
+  padding: 0.6rem 1.2rem;
   border-radius: 0.5rem;
   border: none;
+  margin-top: 0.6rem;
+}
+
+/* ======= HURRAY ========= */
+
+.hurray-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  flex-direction: column;
+  color: white;
+  height: 100vh;
+}
+#trophy {
+  position: absolute;
+  top: 11rem;
+}
+.hurray-container h1 {
+  font-size: 5rem;
+  font-weight: 800;
+  letter-spacing: 0.5rem;
+  transform: scaleY(1.3);
+}
+.hurray-container h2 {
+  font-size: 3rem;
+  font-weight: 600;
+  margin-bottom: 5rem;
+}
+.reset-btn {
+  background-color: white;
+  color: #6b6b6b;
+  font-weight: 700;
+  font-size: 0.7rem;
+  letter-spacing: 0.1rem;
+  padding: 0.6rem 1.2rem;
+  border-radius: 0.5rem;
+  border: none;
+  margin-top: 0.6rem;
+  z-index: 1;
 }
