--- a/Module1/Project/Rock_Paper_Scissor/rps-styles.css
+++ b/Module1/Project/Rock_Paper_Scissor/rps-styles.css
@@ -426,3 +426,10 @@ main {
   margin-top: 0.6rem;
   z-index: 1;
 }
+
+/* == MEDIA QUERY == */
+/* @media only screen and (max-width:600px){
+  .title-container {
+   width: 35rem;
+}
+} */
