--- a/Module2/01Navbar/src/App.css
+++ b/Module2/01Navbar/src/App.css
@@ -34,3 +34,33 @@ body{
   text-align:  center;
   margin-top: 5rem;
 }
+
+.counter-container{
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+}
+.bg-container{
+  width: 100vw;
+  height: 100vh;
+}
+.btn-container{
+  display:  flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.2rem;
+  padding-top: 3rem;
+}
+.btn{
+  padding: 0.5rem 1rem;
+  border-radius: 0.6rem;
+  border: none;
+  font-weight: 600;
+  font-size: 1.2rem;
+  box-shadow: inset;
+  color: #000000;
+  
+}
