--- a/Module1/Project/Rock_Paper_Scissor/rps-styles.css
+++ b/Module1/Project/Rock_Paper_Scissor/rps-styles.css
@@ -15,6 +15,17 @@ main {
   flex-wrap: wrap;
 }
 
+/* ==== GREET === */
+.greet{
+  font-size: 1.5rem;
+  font-weight: 800;
+  text-align: center;
+  margin-top: 2rem;
+  color: white;
+  letter-spacing: 0.1rem;
+  transform: scaleY(1.2);
+}
+
 /* TITLE CONTAINER */
 .title {
   display: flex;
@@ -112,15 +123,15 @@ main {
 .three {
   border: 1rem solid #bd00ff;
 }
-.rock img {
+.rock-img {
   width: 4rem;
   height: 3rem;
 }
-.scissor img {
+.scissor-img {
   width: 2.5rem;
   height: 3rem;
 }
-.paper img {
+.paper-img {
   width: 3.8rem;
   height: 4rem;
 }
@@ -247,13 +258,10 @@ main {
 }
 
 /* ============ELLIPSE CONTAINER==========*/
-.ellipse{
+.ellipse {
   position: absolute;
-
   margin-bottom: 7.1rem;
   margin-right: 93.5rem;
-  /* top: 3rem;
-  left: -13.2rem; */
 }
 .ellipse-container {
   display: flex;
@@ -262,19 +270,17 @@ main {
   position: absolute;
   top: 0rem;
   left: 27.5rem;
-  /* margin-bottom: 10rem; */
-  /* margin-right: 28rem ; */
 }
-.ellipse-transition{
+.ellipse-transition {
   transform: translateX(27.5rem);
 }
-.ellipse-transition-lost{
+.ellipse-transition-lost {
   transform: translateX(30.2rem);
 }
-.ellipse-transition-win{
+.ellipse-transition-win {
   transform: translateX(-2rem);
 }
-.ellipse-transition-ti{
+.ellipse-transition-ti {
   transform: translateX(-0.7rem);
 }
 .layer-1 {
@@ -301,15 +307,15 @@ main {
 
 @keyframes outer1 {
   0% {
-    transform: scale(1); 
+    transform: scale(1);
     background-color: #7be382;
     width: 11rem;
     height: 11rem;
     box-shadow: 0px 1px 62px 0px #00000021;
   }
   100% {
-    transform: scale(1.2); 
-    background-color: #7be382; 
+    transform: scale(1.2);
+    background-color: #7be382;
     width: 11rem;
     height: 11rem;
     box-shadow: 0px 1px 62px 0px #00000021;
@@ -317,14 +323,14 @@ main {
 }
 @keyframes outer2 {
   0% {
-    transform: scale(1); 
-    background-color: #26cc00; 
+    transform: scale(1);
+    background-color: #26cc00;
     width: 8rem;
     height: 8rem;
   }
   100% {
-    transform: scale(1.2); 
-    background-color: #26cc00; 
+    transform: scale(1.2);
+    background-color: #26cc00;
     width: 8rem;
     height: 8rem;
     box-shadow: 0px 1px 62px 0px #00000021;
@@ -332,15 +338,15 @@ main {
 }
 @keyframes outer3 {
   0% {
-    transform: scale(1); 
-    background-color: #009c1a; 
+    transform: scale(1);
+    background-color: #009c1a;
     width: 6rem;
     height: 6rem;
     box-shadow: 0px 1px 62px 0px #00000021;
   }
   100% {
     transform: scale(1.2);
-    background-color: #009c1a; 
+    background-color: #009c1a;
     width: 6rem;
     height: 6rem;
     box-shadow: 0px 1px 62px 0px #00000021;
@@ -354,7 +360,7 @@ main {
   align-items: center;
   gap: 6rem;
   color: white;
-  margin: 6rem 0;
+  margin: 5rem 0;
   position: relative;
 }
 .picked {
@@ -410,12 +416,11 @@ main {
   position: relative;
   flex-direction: column;
   color: white;
-  height: 100vh;
+  height: 80vh;
 }
 #trophy {
   position: absolute;
   top: 9.5rem;
-
 }
 .hurray-container h1 {
   font-size: 5rem;
@@ -441,21 +446,248 @@ main {
   z-index: 1;
 }
 
-/* == MEDIA QUERY == */
-@media only screen and (max-width:600px){
+/* ======== MEDIA QUERY ========= */
+
+@media only screen and (max-width: 600px) {
+  /* GREET */
+  .greet{
+    margin-top: 1rem;
+    font-size: 1.1rem;
+  }
+  /* TITLE */
   .title-container {
-   width: 35rem;
+    width: 22.5rem;
+    margin: 0;
+    margin-top: 1rem;
+  }
+
+  .title-name {
+    font-size: 1.2rem;
+    line-height: 1.6rem;
+    letter-spacing: 0.2rem;
+  }
+
+  .score-cards {
+    font-size: 0.7rem;
+    gap: 0.5rem;
+  }
+
+  .score {
+    width: 5.2rem;
+  }
+
+  .computer-score {
+    font-size: 2.1rem;
+  }
+
+  .your-score {
+    font-size: 2.1rem;
+  }
+
+  /* ICON */
+  .icons {
+    padding-top: 1.5rem;
+  }
+  .line {
+    width: 12rem;
+  }
+  .rock,
+  .one {
+    border: 0.6rem solid #0074b6;
+  }
+  .paper,
+  .two {
+    border: 0.6rem solid #ffa943;
+  }
+  .scissor,
+  .three {
+    border: 0.6rem solid #bd00ff;
+  }
+  .move-container {
+    width: 5.5rem;
+    height: 5.5rem;
+  }
+  .rock-img {
+    width: 3.5rem;
+    height: 2.5rem;
+  }
+  .scissor-img {
+    width: 2rem;
+    height: 2.5rem;
+  }
+  .paper-img {
+    width: 3.3rem;
+    height: 3.5rem;
+  }
+  .line-1 {
+    top: 2.2rem;
+    right: 3.8rem;
+  }
+  .line-2 {
+    left: 0.4rem;
+     transform: rotate(57deg);
+  }
+  .line-3 {
+    right: 0.4rem;
+  }
+
+  /* RULE  */
+  .rule-btn {
+    padding: 0.2rem 0.6rem;
+    font-size: 1rem;
+    letter-spacing: 0.1rem;
+    font-weight: 700;
+    text-align: right;
+    right: 1rem;
+  }
+  .rule-btn-transition {
+    transform: translateX(-5.5rem);
 }
-.you-win-text{
-  width: 15rem;
+
+  /* You WIN against PC */
+  .you-win {
+    margin: 3rem 0rem;
+    gap: 0rem;
+  }
+  .you-win-text {
+    width: 9rem;
+    line-height: 1.4rem;
+  }
+  .you-win-text-line-1 {
+    font-size: 1rem;
+    font-weight: 800;
+    letter-spacing: 0.1rem;
+  }
+  .you-win-text-line-2 {
+    font-size: 0.9rem;
+    font-weight: 700;
+    letter-spacing: 0.1rem;
+  }
+
+  .ellipse-container {
+    margin: 0 -3.5rem;
+  }
+  .play-again-btn {
+    font-weight: 700;
+    font-size: 0.6rem;
+    letter-spacing: 0rem;
+    padding: 0.6rem 1rem;
+  }
+  .reset-btn {
+    font-weight: 700;
+    font-size: 0.6rem;
+    letter-spacing: 0rem;
+    padding: 0.6rem 1rem;
+  }
+  .next-btn {
+  padding: 0.2rem 0.6rem;
+  font-size: 1rem;
+  letter-spacing: 0.1rem;
+  font-weight: 700;
+  right: 1rem;
 }
-.you-win-text-line-1 {
-  font-size: 1.2rem;
-}
-.you-win{
-  margin: 0 3rem;
-}
-.ellipse-container{
-  margin: 0 -3.5rem;
-}
+
+  /* ELLIPSE TRANSITION */
+
+  .ellipse {
+    margin-bottom: 5.1rem;
+    margin-right: 80.2rem;
+  }
+
+  .ellipse-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 1.5rem;
+    left: 33.3rem;
+  }
+
+  .ellipse-transition {
+    transform: translateX(14.8rem);
+  }
+
+  .ellipse-transition-lost {
+    transform: translateX(14.7rem);
+  }
+
+  .ellipse-transition-win {
+    transform: translateX(0rem);
+  }
+
+  .ellipse-transition-ti {
+    transform: translateX(-0.7rem);
+  }
+  @keyframes outer1 {
+    0% {
+      transform: scale(1);
+      background-color: #7be382;
+      box-shadow: 0px 1px 62px 0px #00000021;
+      width: 6rem;
+      height: 6rem;
+    }
+
+    100% {
+      transform: scale(1.2);
+      background-color: #7be382;
+      width: 6rem;
+      height: 6rem;
+      box-shadow: 0px 1px 62px 0px #00000021;
+    }
+  }
+  @keyframes outer2 {
+    0% {
+      transform: scale(1);
+      background-color: #26cc00;
+      width: 4.8rem;
+      height: 4.8rem;
+    }
+
+    100% {
+      transform: scale(1.2);
+      background-color: #26cc00;
+      width: 4.8rem;
+      height: 4.8rem;
+      box-shadow: 0px 1px 62px 0px #00000021;
+    }
+  }
+
+  @keyframes outer3 {
+    0% {
+      transform: scale(1);
+      background-color: #009c1a;
+      width: 3rem;
+      height: 3rem;
+      box-shadow: 0px 1px 62px 0px #00000021;
+    }
+
+    100% {
+      transform: scale(1.2);
+      background-color: #009c1a;
+      width: 3rem;
+      height: 3rem;
+      box-shadow: 0px 1px 62px 0px #00000021;
+    }
+  }
+
+  /* HURRAY */
+  #star {
+    max-width: 24rem;
+    /* margin-bottom: 3rem; */
+  }
+  #trophy {
+    max-width: 8rem;
+    top: 12.5rem;
+  }
+  .hurray-container h1 {
+    font-size: 3rem;
+    font-weight: 700;
+    letter-spacing: 0.4rem;
+    margin-top: 1rem;
+  }
+  .hurray-container h2 {
+    font-size: 1.7rem;
+    font-weight: 600;
+    margin-bottom: 5rem;
+  }
 }
